--- a/Project_3/project_3/pom.xml
+++ b/Project_3/project_3/pom.xml
@@ -84,11 +84,30 @@
 
 
 		<!-- https://mvnrepository.com/artifact/net.sf.jasperreports/jasperreports -->
-		<dependency>
+<!-- 		<dependency>
 			<groupId>net.sf.jasperreports</groupId>
 			<artifactId>jasperreports</artifactId>
 			<version>6.13.0</version>
-		</dependency>
+		</dependency> -->
+		<dependency>
+			<groupId>net.sf.jasperreports</groupId>
+			<artifactId>jasperreports</artifactId>
+			<version>6.11.0</version>
+   <exclusions>
+      <exclusion>
+         <groupId>com.lowagie</groupId>
+         <artifactId>itext</artifactId>
+      </exclusion>
+   </exclusions>
+</dependency>
+
+
+<dependency>
+   <groupId>com.lowagie</groupId>
+   <artifactId>itext</artifactId>
+   <version>[1.02b,2.1.7]</version>
+   <scope>compile</scope>
+</dependency>
 
 
 
